# HW7_Pyton1

.primer/: pyvenv.cfg
.primer/Scripts/: activate  activate.bat
clean_folder/: README.md  requirements.txt  setup.cfg  setup2.cfg
clean_folder/clean_folder/: __init__.py  clean.py  normalize.py  normalize1.py
