[metadata]
name = clean
version = attr: example.__version__
author = Rostyslav Bysko
author_email = brn.h74@gmail.com
url = https://github.com/RostislavB74/HW7_Pyton1
description = Sorting files by extensions in folder Motlokh. Moving empty folders after sorting 
long_description = file: README.md
long_description_content_type = text/markdown
keywords = clean, clean_folder, setuptools
license =  Apache License
classifiers =
    License :: Version 2.0, January 2004
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = False
include_package_data = True

    

[options.entry_points]
console_scripts = 
    clean = clean_folder.main:main

